feat: define interfaces for env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "baseUrl": "./src",
     "paths": {
       "@config/*": ["./config/*"],
+      "@interface/*": ["./interface/*"],
       "@module/*": ["./module/*"],
       "@middleware/*": ["./middleware/*"],
       "@types/*": ["./types/*"],
