--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "bun --watch src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "bun dist/index.js"
+    "start": "bun dist/index.js",
+    "format":"bunx prettier . --write"
   },
   "license": "Apache-2.0",
   "type": "module",
