feat: implement user service and controller for fetching user by ID, update routes to integrate new functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "@config/*": ["./config/*"],
       "@interface/*": ["./interface/*"],
       "@module/*": ["./module/*"],
-      "@middleware/*": ["./middleware/*"],
+      "@middlewares/*": ["./middlewares/*"],
       "@types/*": ["./types/*"],
       "@utils/*": ["./utils/*"],
       "@validation/*": ["./validation/*"]
