--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "outDir": "dist",
 
     // Path Alias
-    "ignoreDeprecations": "6.0",
     "baseUrl": "./src",
     "paths": {
       "@config/*": ["./config/*"],
@@ -19,13 +18,13 @@
     // Environment setup & latest features
     "lib": ["ESNext"],
     "target": "ESNext",
-    "module": "Preserve",
+    "module": "NodeNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
 
     // Bundler mode
-    "moduleResolution": "bundler",
+    "moduleResolution": "NodeNext",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
