--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
+    "@types/slug": "^5.0.9",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.39.2",
     "globals": "^17.3.0",
@@ -48,6 +49,7 @@
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "slug": "^11.0.1",
     "zod": "^4.3.6"
   }
 }
