--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,48 +1,29 @@
 {
   "compilerOptions": {
-    // Root dir
     "rootDir": "src",
     "outDir": "dist",
-
-    // Path Alias
-    "baseUrl": "./src",
+    "baseUrl": "./src/",
     "paths": {
-      "@config/*": ["./config/*"],
-      "@interface/*": ["./interface/*"],
-      "@module/*": ["./module/*"],
-      "@middlewares/*": ["./middlewares/*"],
-      "@types/*": ["./types/*"],
-      "@utils/*": ["./utils/*"],
-      "@validation/*": ["./validation/*"]
+      "@config/*": ["config/*"],
+      "@interface/*": ["interface/*"],
+      "@module/*": ["module/*"],
+      "@middlewares/*": ["middlewares/*"],
+      "@types/*": ["types/*"],
+      "@utils/*": ["utils/*"],
+      "@validation/*": ["validation/*"]
     },
-    // Environment setup & latest features
-    "lib": ["ESNext"],
-    "target": "ESNext",
+
+    "target": "ES2020",
     "module": "NodeNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-
-    // Bundler mode
     "moduleResolution": "NodeNext",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
 
-    // Best practices
     "strict": true,
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
-
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+
+    "sourceMap": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
